fix extra white space in small screens

--- a/src/styles/layout/home.scss
+++ b/src/styles/layout/home.scss
@@ -286,6 +286,10 @@
                 &__img {
                     width: 100%;
                 }
+                .background-o {
+                    left: unset;
+                    right: 0;
+                }
             }
             &__barras {
                 &__img {
